examples/neg/ParallelAssignment-Neg2.iml
// type missmatch with lvalues
program parallelAssignmentNeg()
global
  var i1: int64;
  var i2: int64;
  var b1: bool;
  var b2: bool
do
  i1 init := 1;
  i2 init := 2;
  b1 init := false;
  b2 init := true;
  i1, i2, b1, b2 := i2, b2, i1, b1
endprogram
